Fixing spacing

--- a/css/cress.css
+++ b/css/cress.css
@@ -867,11 +867,11 @@
     padding-left: 0px;
   }
   .div-block-114 {
-    margin-right: 10px;
+    margin-right: 0px;
   }
-  
+
   .div-block-115 {
-    margin-left: 10px;
+    margin-left: 0px;
   }
 
   .column-41 {
